@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: stats.c,v 1.6.18.3 2005/06/17 02:04:31 marka Exp $ */
+/* $Id: stats.c,v 1.6.18.4 2005/06/27 00:20:02 marka Exp $ */
 
 /*! \file */
 
@@ -33,7 +33,8 @@ LIBDNS_EXTERNAL_DATA const char *dns_statscounter_names[DNS_STATS_NCOUNTERS] =
 	"nxdomain",
 	"recursion",
 	"failure",
-	"duplicate"
+	"duplicate",
+	"dropped"
 	};
 
 isc_result_t
